modifications complete